# librsync

./: .gitignore  CMakeLists.txt  make.sh
